--- a/package.json
+++ b/package.json
@@ -1,6 +1,6 @@
 {
   "name": "makecodeiceberg",
-  "homepage": "https://amyeguo.github.io/iceberg/",
+  "homepage": "https://amyeguo.github.io/iceberg",
   "version": "0.1.0",
   "private": true,
   "dependencies": {
