--- a/package.json
+++ b/package.json
@@ -1,6 +1,6 @@
 {
   "name": "makecodeiceberg",
-  "homepage": "https://amyeguo.github.io/iceberg",
+  "homepage": "https://ka-moamoa.github.io/makecode-website/",
   "version": "0.1.0",
   "private": true,
   "dependencies": {
